tests/errors/comb-component.expect
---CODE---
1
---STDERR---
Error: tests/errors/comb-component.futil
4 |    mem = std_mem_d1(32, 2048, 11);
  |    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Malformed Structure: Component `custom_lt` is marked combinational but contains non-combinational cell `mem`
